<resources>
    <string name="app_name">Movies</string>
    <string name="hint">Text</string>
    <string name="title">Title: %s</string>
    <string name="director">Director: %s</string>
    <string name="actors">Cast: %s</string>
    <string name="year">Year: %s</string>
    <string name="genres">Genres: %s</string>
    <string name="description">Description: %s</string>
    <string name="select_movie">Please select a movie</string>
    <string name="delete_movie">Delete movie</string>
    <string name="add_movie">Add movie</string>
    <string name="edit_movie">Edit movie</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="select_genres">Select genres</string>
    <string name="done">Done</string>
    <string name="hint_title">Title</string>
    <string name="hint_director">Name</string>
    <string name="hint_actors">Name1, Name2, Name3…</string>
    <string name="hint_year">2022</string>
    <string name="hint_genres">Genre1, Genre2, Genre3…</string>
    <string name="hint_description">This movie is about…</string>
    <string name="title_dialog">Title: </string>
    <string name="director_dialog">Director: </string>
    <string name="actors_dialog">Cast: </string>
    <string name="year_dialog">Year: </string>
    <string name="genres_dialog">Genres: </string>
    <string name="description_dialog">Description: </string>
    <string name="sort">Sort</string>
    <string name="button">Change picture</string>
    <string name="format">Supported formats are PNG and JPEG</string>
    <string name="fields">All fields must be filled correctly</string>
    <string name="exist">Movie with this title already exist</string>
    <string name="added">You successfully added a new movie</string>
    <string name="edited">You successfully edited the movie</string>

</resources>